<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ST_SelectStruct" Id="{e7f65f17-5ab8-4437-a2f6-648d9c46d320}">
    <Declaration><![CDATA[TYPE ST_SelectStruct :
STRUCT
	TimeStr			: DATE_AND_TIME;	
	Trailer_ID		: UINT;
	Lat				: LREAL;
	Lon				: LREAL;
	Speed			: LREAL;
	Overspeed		: BOOL;
	Payload_EMA		: LREAL;
	Payload_Raw		: LREAL;
	Overload		: BOOL;
	Pressure_Cyl	: LREAL;
	Pressure_Val	: LREAL;
	Strain_Left		: LREAL;
	Strain_Right	: LREAL;
	EventCode		: UINT;
	Cycle_Duration	: UDINT;
	Hyd_Efficiency	: LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>